// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/get-messages/slack GetMessages when specified destination does exist performs correctly 1`] = `
Ok {
  "value": Object {
    "messages": Array [
      Object {
        "author": "UF4PRBHL7",
        "createdAt": 1643835555.648069,
        "id": "1643835555.648069",
        "text": "test",
      },
      Object {
        "author": "UF4PRBHL7",
        "createdAt": 1643835553.658259,
        "id": "1643835553.658259",
        "reactions": Array [
          Object {
            "count": 1,
            "emoji": "eyes",
            "users": Array [
              "UF4PRBHL7",
            ],
          },
        ],
        "text": "test",
      },
      Object {
        "author": "UF4PRBHL7",
        "createdAt": 1643798649.182019,
        "id": "1643798649.182019",
        "text": "test :test_tube:",
        "updatedAt": 1643836476,
      },
    ],
    "nextPage": "bmV4dF90czoxNjQzMjE2NDQzMjM0MDc5",
  },
}
`;

exports[`chat/get-messages/slack GetMessages when specified destination does exist performs correctly 2`] = `
Ok {
  "value": Object {
    "messages": Array [
      Object {
        "author": "UF4PRBHL7",
        "createdAt": 1643216443.234079,
        "id": "1643216443.234079",
        "reactions": Array [
          Object {
            "count": 1,
            "emoji": "tada",
            "users": Array [
              "UF4PRBHL7",
            ],
          },
        ],
        "text": "test",
        "updatedAt": 1643285583,
      },
    ],
  },
}
`;

exports[`chat/get-messages/slack GetMessages when specified destination does not exist returns error 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"channel_not_found\\"
}
AST Path: definitions[0].statements[0].responseHandlers[0].statements[0]
Original Map Location: Line 24, column 4",
}
`;
